; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_motion_plus.c_wiiuse_set_motion_plus_clear2.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_motion_plus.c_wiiuse_set_motion_plus_clear2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiimote_t = type { i32 }

@WIIMOTE_STATE_EXP = common dso_local global i32 0, align 4
@WIIMOTE_STATE_EXP_FAILED = common dso_local global i32 0, align 4
@WIIMOTE_STATE_EXP_HANDSHAKE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wiimote_t*, i32*, i32)* @wiiuse_set_motion_plus_clear2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wiiuse_set_motion_plus_clear2(%struct.wiimote_t* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.wiimote_t*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.wiimote_t* %0, %struct.wiimote_t** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %8 = load i32, i32* @WIIMOTE_STATE_EXP, align 4
  %9 = call i32 @WIIMOTE_DISABLE_STATE(%struct.wiimote_t* %7, i32 %8)
  %10 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %11 = load i32, i32* @WIIMOTE_STATE_EXP_FAILED, align 4
  %12 = call i32 @WIIMOTE_DISABLE_STATE(%struct.wiimote_t* %10, i32 %11)
  %13 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %14 = load i32, i32* @WIIMOTE_STATE_EXP_HANDSHAKE, align 4
  %15 = call i32 @WIIMOTE_DISABLE_STATE(%struct.wiimote_t* %13, i32 %14)
  %16 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %17 = call i32 @wiiuse_set_ir_mode(%struct.wiimote_t* %16)
  %18 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %19 = call i32 @wiiuse_status(%struct.wiimote_t* %18, i32* null)
  ret void
}

declare dso_local i32 @WIIMOTE_DISABLE_STATE(%struct.wiimote_t*, i32) #1

declare dso_local i32 @wiiuse_set_ir_mode(%struct.wiimote_t*) #1

declare dso_local i32 @wiiuse_status(%struct.wiimote_t*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
